Dev 0.4.0 (#16)
* Switch to NexusVault 5.0

* Add new flag 'separate' to export
If set, exported files will be placed in their own folders