@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Collection;
@@ -18,13 +17,15 @@ import java.util.regex.Pattern;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import nexusvault.archive.IdxPath;
 import nexusvault.cli.core.App;
+import nexusvault.cli.core.AutoInstantiate;
 import nexusvault.cli.core.Console.Level;
 import nexusvault.cli.core.extension.AbstractExtension;
 import nexusvault.cli.extensions.archive.command.ChangeDirectory;
 import nexusvault.cli.extensions.archive.command.SetArchivePath;
+import nexusvault.vault.IdxPath;
 
+@AutoInstantiate
 public final class ArchiveExtension extends AbstractExtension {
 
 	private final static Logger logger = LogManager.getLogger(ArchiveExtension.class);
@@ -52,15 +53,15 @@ public final class ArchiveExtension extends AbstractExtension {
 	 * Called by {@link ChangeDirectory}
 	 */
 	public void changeDirectory(String target) {
-		final List<NexusArchiveContainer> wrappers = getArchives();
-		if (wrappers.isEmpty()) {
+		final List<NexusArchiveContainer> archives = getArchives();
+		if (archives.isEmpty()) {
 			sendMsg("No vaults are loaded. Use 'help' to learn how to load them");
 			return;
 		}
 
 		IdxPath path = this.innerPath;
 
-		target = Paths.get(target).toString();
+		target = Path.of(target).toString();
 		if (target.startsWith(IdxPath.SEPARATOR)) {
 			path = path.getRoot();
 		}
@@ -70,8 +71,8 @@ public final class ArchiveExtension extends AbstractExtension {
 		for (final String step : steps) {
 			newPath = newPath.resolve(step);
 			boolean isResolvable = false;
-			for (final NexusArchiveContainer wrapper : wrappers) {
-				isResolvable |= newPath.isResolvable(wrapper.getArchive().getRootDirectory());
+			for (final NexusArchiveContainer archive : archives) {
+				isResolvable |= archive.find(newPath).isPresent();
 				if (isResolvable) {
 					break;
 				}
@@ -113,7 +114,11 @@ public final class ArchiveExtension extends AbstractExtension {
 		final var archiveContainers = this.archiveContainers;
 		this.archiveContainers = Collections.emptyList();
 		for (final var container : archiveContainers) {
-			container.dispose();
+			try {
+				container.dispose();
+			} catch (final IOException e) {
+				logger.catching(e);
+			}
 		}
 		this.reloadArchive = true;
 	}
