@@ -1,7 +1,6 @@
 package nexusvault.cli.extensions.base.command;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import nexusvault.cli.core.App;
 import nexusvault.cli.core.AutoInstantiate;
@@ -29,7 +28,7 @@ public final class AppRootDirectory implements ArgumentHandler {
 
 	@Override
 	public void execute(Argument args) {
-		final Path path = Paths.get(args.getValue());
+		final Path path = Path.of(args.getValue());
 		App.getInstance().getExtensionManager().getExtension(AppBaseExtension.class).setApplicationPath(path);
 	}
 }
